Kubernetes/chess-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess-deployment
  labels:
    app: chess
    group: db
spec:
  selector:
    matchLabels:
      app: chess
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: chess
    spec:
      containers:
        - name: chess-server
          image: 112axel/blazor-chess
          ports:
            - containerPort: 80
