Kubernetes/chess-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chess
spec:
  type: ClusterIP
  selector:
    app: chess
  ports:
    - port: 80
      targetPort: 80
